--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>redux-vue-jsx-boilerplate</title>
+    <title>Redux Vue and Plain Vue Tab</title>
   </head>
   <body>
     <div id="app"></div>
